# against of error: Makefile.am:3: `doc_DATA' is used but `docdir' is undefined
docdir = @docdir@

SUBDIRS = src doc

doc_DATA = \
        README\
        COPYING\
        AUTHORS\
        ChangeLog\
        NEWS\
        TODO

EXTRA_DIST = \
	rpm/mandriva.spec \
	rpm/redhat.spec \
	update-oui-database.sh

