## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

netdiscover_docdir = $(prefix)/@NO_PREFIX_PACKAGE_DOC_DIR@

man_MANS = \
	netdiscover.8

EXTRA_DIST = $(man_MANS)
