sbin_PROGRAMS = netdiscover

netdiscover_SOURCES = \
        main.c\
        ifaces.c\
        screen.c\
        ifaces.h\
        screen.h\
        fhandle.c\
        fhandle.h\
        misc.c\
        misc.h\
        oui.h\
        data_al.h\
        data_reply.c \
        data_request.c \
        data_unique.c

netdiscover_LDADD = \
	-lpthread -lpcap -lnet

